--- a/index.html
+++ b/index.html
@@ -267,6 +267,16 @@ width: 100%;
         <script>
           const noticias = [
             {
+              thumb: "https://i.imgur.com/uTlDXzP.jpeg",
+              title: "Mala com Documentos das Testemunhas de Jeová é Encontrada em Boaçu",
+              link: "./n23.html",
+            },
+            {
+              thumb: "https://i.imgur.com/cRu3iQm.jpeg",
+              title: "Três homens são mortos pela polícia em SG; segundo Civil, bandido que ordenou ataque a delegacia em SG está entre eles",
+              link: "./n22.html",
+            },
+            {
               thumb: "https://i.imgur.com/OP3Y9NO.jpeg",
               title: "Salão do Reino das Testemunhas de Jeová Passa Vergonha Após Nova Tentativa de Sequestro Fracassada",
               link: "./n20.html",
