--- a/n23.html
+++ b/n23.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testemunhas de Jeová: A propaganda é a alma do negócio. - Boaçu News</title>
+    <title>Mala com Documentos das Testemunhas de Jeová é Encontrada em Boaçu - Boaçu News</title>
   <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/2a3ba37e-8fd6-45e1-a2a5-5165eb61a890/snake(1).png?v=1729708619830">
     <style>
         body {
@@ -186,9 +186,9 @@
           <p>Uma mala foi encontrada na cidade de Boaçu, contendo documentos pertencentes a um membro das Testemunhas de Jeová.</p>
 
                    <center>
-          <img src="https://i.imgur.com/cRu3iQm.jpeg" alt="Imagem da Notícia">
+          <img src="https://i.imgur.com/uTlDXzP.jpeg" alt="Imagem da Notícia">
            </center>
-            <div><h3>Por Bruna Diógenes, para o Boaçu News</h3><p>02•08•2025 02h30 📍 São Gonçalo, Rio de Janeiro </p></div>
+            <div><h3>Por Bruna Diógenes, para o Boaçu News</h3><p>02•08•2024 02h00 📍 Boaçu, São Gonçalo, Rio de Janeiro </p></div>
             <hr>
           <div>
             
@@ -196,9 +196,6 @@
        <div>
 
 
-
-
-  <img src="https://i.imgur.com/uTlDXzP.jpeg" alt="Imagem da Notícia">
 <p>A mala, que estava abandonada em um local público, continha arquivos e registros detalhando atividades e situações envolvendo a organização. Entre os documentos, estavam informações sobre perseguições e sequestros realizados anteriormente por membros do grupo.</p>
 
 <p>O achado foi feito por moradores locais que, ao verificarem o conteúdo da mala, encontraram uma série de papéis e anotações. A documentação, aparentemente confidencial, fazia referência a eventos passados que envolviam membros das Testemunhas de Jeová em situações controversas.</p>
