--- a/n22.html
+++ b/n22.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testemunhas de Jeová: A propaganda é a alma do negócio. - Boaçu News</title>
+    <title>Três homens são mortos pela polícia em SG; segundo Civil, bandido que ordenou ataque a delegacia em SG está entre eles - Boaçu News</title>
   <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/2a3ba37e-8fd6-45e1-a2a5-5165eb61a890/snake(1).png?v=1729708619830">
     <style>
         body {
