--- a/n23.html
+++ b/n23.html
@@ -207,7 +207,7 @@
 
            <div style="background-color: #fff3cd; border-left: 6px solid #ffeeba; padding: 12px; margin: 20px 0; border-radius: 4px; color: #856404; font-family: Arial, sans-serif;">
     ⚠️ <strong>Aviso Importante:</div>
-    <h1><strong>Testemunhas de Jeová não deixam pessoas se dissociar e rasgam cartas</strong></h1>
+    <h2>Testemunhas de Jeová não deixam pessoas se dissociar e rasgam cartas</h2>
 
     <p>Moradores têm denunciado uma situação preocupante envolvendo o grupo religioso das Testemunhas de Jeová. De acordo com relatos, pessoas que desejam se dissociar da organização estão tendo suas cartas recusadas — em alguns casos, essas cartas são simplesmente rasgadas pelas lideranças locais, impedindo que a decisão da pessoa seja formalizada.</p>
 
