--- a/n16.html
+++ b/n16.html
@@ -186,7 +186,7 @@
           <p>Recentemente, Gabriel teve a coragem de revelar práticas abusivas que aconteceram dentro da organização das Testemunhas de Jeová, incluindo o uso de hipnose e o sequestro de indivíduos.</p>
 
                    <center>
-                       <iframe width="100%" height="auto" src="https://www.youtube.com/embed/s1KY7giPY0Y?si=4Od-q0PVmwkaSbiR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                       <iframe width="100%" height="500px" src="https://www.youtube.com/embed/s1KY7giPY0Y?si=4Od-q0PVmwkaSbiR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           <img src="https://i.imgur.com/ZK79HdO.png" alt="Imagem da Notícia">
            </center>
             <div><h3>Por Bruna Diógenes, para o Boaçu News</h3><p>10•03•2018 02h30 📍 São Gonçalo, Rio de Janeiro </p></div>
