--- a/n23.html
+++ b/n23.html
@@ -213,7 +213,7 @@
 
     <p>Esse tipo de comportamento tem gerado revolta e sofrimento em quem deseja apenas exercer seu direito de sair do grupo de forma clara e respeitosa.</p>
 
-    <p><strong>Ouça o relato do morador:</strong> <em>(áudio será inserido aqui)</em></p>
+    <p><strong>Ouça o relato do morador:</strong></p><audio  controls src="https://audio.jukehost.co.uk/PTHZF86nJopMJTso2JidKfeT1zTJtBZf"></audio>
 
     <p>Diante desses acontecimentos, nós do <strong>Boaçu Notícias</strong> tomamos a iniciativa de apoiar essas pessoas, oferecendo um espaço para que elas possam tornar pública a sua decisão. Para isso, estamos publicando as cartas de dissociação em nossas redes sociais. É importante que a carta seja <strong>manuscrita</strong>, para garantir a autenticidade do documento.</p>
 
